--- a/src/catalog_page.html
+++ b/src/catalog_page.html
@@ -5,7 +5,7 @@
 	<title>Oracle</title>
 	@@include('./partials/head.html')
 </head>
-<body>
+<body  class="catalog-page">
 <!-- BEGIN  wrapper-->
 <div class="wrapper">
 	@@include('./sections/header.html')
