--- a/src/sections/newsletter_catalog.html
+++ b/src/sections/newsletter_catalog.html
@@ -1,1 +1,31 @@
-afdffff
+<section class="newsletter_catalog gift">
+<div class="container mod">
+
+	<div class="newsletter_catalog__title">
+		Choosing jewelry for a graceful woman's hand, you can easily get confused, because rings impress with a variety of shapes.
+	</div>
+
+	<div class="gift_items">
+		<div class="gift_items__left">
+			<div class="gift_items__image" href="#">
+				<img src="img/gift2.png" alt="">
+			</div>
+		</div>
+		<div class="gift_items__right">
+			<div class="gift_items__info gift_items__info__mod-input">
+				<div class="gift_items__title">
+					Newsletter
+				</div>
+				<p class="gift_items__description">Sign up for exclusive deals and early access to new products.</p>
+				<input type="email" placeholder="Your Email" class="custom-input" />
+				<div class="gift_items__button">
+					<a href="#">
+						<button class="shop-now shop-now__newslt_mod">Subscribe</button>
+					</a>
+				</div>
+			</div>
+
+		</div>
+	</div>
+</div>
+</section>
