--- a/src/sections/catalog_main.html
+++ b/src/sections/catalog_main.html
@@ -1,4 +1,4 @@
 <main class="catalog_main">
-		@@include('./catalog_page.html')
+		@@include('./collection.html')
 		@@include('./newsletter_catalog.html')
 </main>
