product page half

--- a/src/sections/gift.html
+++ b/src/sections/gift.html
@@ -13,7 +13,7 @@
 					your choice?A gift certificate is a modern way to bring in friends and relatives, to pick out
 					those who are dear to your heart.</p>
 				<div class="gift_items__button">
-					<a href="#" class="shop-now">Shop Now</a>
+					<a href="#" class="shop-gift">Shop Now</a>
 				</div>
 			</div>
 
@@ -37,7 +37,7 @@
 						<option value="300">$300</option>
 					</select>
 					<div class="gift_items__button">
-						<a href="#" class="shop-now">Shop Now</a>
+						<a href="#" class="shop-gift">Shop Now</a>
 					</div>
 				</div>
 
@@ -55,7 +55,7 @@
 				<input type="email" placeholder="Your Email" class="custom-input" />
 				<div class="gift_items__button">
 					<a href="#">
-						<button class="shop-now shop-now__newslt_mod">Subscribe</button>
+						<button class="shop-gift shop-gift__newslt_mod">Subscribe</button>
 					</a>
 				</div>
 			</div>
