cart інтегровано в шопі

--- a/src/sections/catalog_page.html
+++ b/src/sections/catalog_page.html
@@ -124,7 +124,7 @@
 		</div>
 
 		<div class="gift_items__button">
-			<a href="#" class="shop-now shop-now__filters">Filter</a>
+			<a href="#" class="button_standart shop-gift__filters">Filter</a>
 		</div>
 
 		<button class="items_button">
