--- a/src/sections/more_products.html
+++ b/src/sections/more_products.html
@@ -2,11 +2,9 @@
 	<div class="container">
 		<section class="items">
 			<div class="items_title">
-				Popular Items
+				You May Also Like
 			</div>
 			@@include('../partials/items_card.html')
 		</section>
-
 	</div>
-
 </div>
