--- a/src/sections/gift.html
+++ b/src/sections/gift.html
@@ -13,7 +13,7 @@
 					your choice?A gift certificate is a modern way to bring in friends and relatives, to pick out
 					those who are dear to your heart.</p>
 				<div class="gift_items__button">
-					<a href="#" class="shop-gift">Shop Now</a>
+					<a data-cart-open class="shop-gift">Shop Now</a>
 				</div>
 			</div>
 
