--- a/src/sections/newsletter_catalog.html
+++ b/src/sections/newsletter_catalog.html
@@ -20,7 +20,7 @@
 				<input type="email" placeholder="Your Email" class="custom-input" />
 				<div class="gift_items__button">
 					<a href="#">
-						<button class="shop-now shop-now__newslt_mod">Subscribe</button>
+						<button class="shop-gift  shop-gift__newslt_mod">Subscribe</button>
 					</a>
 				</div>
 			</div>
