--- a/src/cart.html
+++ b/src/cart.html
@@ -9,7 +9,7 @@
 <!-- BEGIN  wrapper-->
 <div class="wrapper">
 	@@include('./sections/header.html')
-	@@include('./sections/cart_page.html')
+	@@include('./sections/cart_main.html')
 
 	@@include('./sections/footer.html')
 </div>
