--- a/src/sections/catalog_page.html
+++ b/src/sections/catalog_page.html
@@ -1,8 +1,15 @@
 <div class="container">
 	<div class="filters_wrapper">
 	<div class="filters_items">
-		<div class="filter__title">
-			Rings
+		<div class="title_wrapper">
+			<div class="filter__title">
+				Rings
+			</div>
+			<button class="filter-close" type="button">
+				<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+					<path fill-rule="evenodd" clip-rule="evenodd" d="M5.28046 19.7849C4.98755 20.0778 4.51264 20.0778 4.21973 19.7849C3.92681 19.492 3.92681 19.0172 4.21973 18.7243L10.9427 12.0023L4.21969 5.28024C3.92677 4.98737 3.92677 4.51253 4.21969 4.21966C4.5126 3.92678 4.98751 3.92678 5.28042 4.21966L12.0034 10.9417L18.7265 4.21965C19.0194 3.92678 19.4943 3.92678 19.7872 4.21965C20.0801 4.51253 20.0801 4.98737 19.7872 5.28024L13.0642 12.0023L19.7872 18.7243C20.0801 19.0172 20.0801 19.492 19.7872 19.7849C19.4943 20.0778 19.0194 20.0778 18.7264 19.7849L12.0035 13.0629L5.28046 19.7849Z" fill="black"></path>
+				</svg>
+			</button>
 		</div>
 		<div class="filter__search-box">
 			<input type="text" placeholder="Search" />
@@ -115,9 +122,9 @@
 			</div>
 			<div class="material_menu">
 				<div class="price-filter">
-					<div id="price-slider"></div>
+					<div class="js-price-slider"></div>
 					<div class="price-values">
-						Price: $<span id="price-lower">40</span> - $<span id="price-upper">180</span>
+						Price: $<span class="js-price-lower">40</span> - $<span class="js-price-upper">180</span>
 					</div>
 				</div>
 			</div>
@@ -145,7 +152,7 @@
 				</select>
 			</div>
 			<div class="list_cube">
-				<a href="#"><svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+				<a href="#"  id="open-filters"><svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
 					<path d="M20.4998 12.9165H12.9165V20.4998H20.4998V12.9165Z" stroke="black" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
 					<path d="M8.58333 12.9165H1V20.4998H8.58333V12.9165Z" stroke="black" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
 					<path d="M20.4998 1H12.9165V8.58333H20.4998V1Z" stroke="black" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
@@ -168,22 +175,11 @@
 		</div>
 
 		<div class="items_block_pagination">
-			@@include('../partials/items_card.html')
 			@@include('../partials/items_card_rings.html')
-			@@include('../partials/items_card_rings.html')
+
 		</div>
 
-		<div class="items_block_pagination">
-			@@include('../partials/items_card_rings.html')
-			@@include('../partials/items_card.html')
-			@@include('../partials/items_card_rings.html')
-		</div>
 
-		<div class="items_block_pagination">
-			@@include('../partials/items_card_rings.html')
-			@@include('../partials/items_card.html')
-			@@include('../partials/items_card.html')
-		</div>
 
 		<div class="pagination">
 			<button class="page-btn active" data-page="1">1</button>
