--- a/src/sections/items.html
+++ b/src/sections/items.html
@@ -5,6 +5,12 @@
 				Popular Items
 			</div>
 			@@include('../partials/items_card.html')
+
+			<div class="items_button">
+				<a class="show_more" href="/collections/oracle_items">
+					Show More
+				</a>
+			</div>
 		</section>
 
 	</div>
