--- a/src/sections/catalog_page.html
+++ b/src/sections/catalog_page.html
@@ -141,6 +141,7 @@
 		</button>
 	</div>
 	</div>
+<!--	<div class="overlay" id="overlay"></div>-->
 	<div class="items_block catalog-limit">
 		<div class="sort">
 			<div class="sort_menu">
@@ -152,12 +153,7 @@
 				</select>
 			</div>
 			<div class="list_cube">
-				<a href="#"  id="open-filters"><svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
-					<path d="M20.4998 12.9165H12.9165V20.4998H20.4998V12.9165Z" stroke="black" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-					<path d="M8.58333 12.9165H1V20.4998H8.58333V12.9165Z" stroke="black" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-					<path d="M20.4998 1H12.9165V8.58333H20.4998V1Z" stroke="black" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-					<path d="M8.58333 1H1V8.58333H8.58333V1Z" stroke="black" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-				</svg></a>
+				<a class="list_filter" href="#"  id="open-filters"><img src="img/filter.png" alt=""></a>
 				<a href="#"><svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
 					<mask id="path-1-inside-1_7917_11087" fill="white">
 						<rect y="10.75" width="20" height="8.5" rx="1"/>
