--- a/src/sections/main_banner.html
+++ b/src/sections/main_banner.html
@@ -4,7 +4,7 @@
 			Jewelry is made with love
 		</div>
 		<div class="banner_button">
-			<a href="#" class="shop-now">Shop Now</a>
+			<a href="catalog_page.html" class="shop-now">Shop Now</a>
 		</div>
 	</div>
 </section>
