--- a/src/sections/items.html
+++ b/src/sections/items.html
@@ -7,7 +7,7 @@
 			@@include('../partials/items_card.html')
 
 			<div class="items_button">
-				<a class="show_more" href="/collections/oracle_items">
+				<a class="show_more" href="catalog_page.html">
 					Show More
 				</a>
 			</div>
