--- a/src/sections/cart.html
+++ b/src/sections/cart.html
@@ -100,11 +100,14 @@
 				<div class="subtotal__price">$224.00</div>
 			</div>
 			<div class="material_menu active">
-				<label class="custom-checkbox ch">
-					<input type="checkbox" />
-					<span class="checkmark"></span>
-					<h2 class="custom-checkbox_title">Please check this box to agree to our terms and conditions</h2>
-				</label>
+				<div class="custom-checkbox ch">
+					<input type="checkbox" id="agree">
+					<label for="agree" class="checkmark"></label>
+					<label for="agree" class="custom-checkbox_title">
+						Please check this box to agree to our terms and conditions
+					</label>
+				</div>
+
 			</div>
 			<div class="gift_items__button">
 				<button class="button_standart check">Checkout</button>
