--- a/src/sections/gift.html
+++ b/src/sections/gift.html
@@ -1,7 +1,7 @@
 <section class="gift">
 	<div class="container">
 		<div class="gift_items__left">
-			<div class="gift_items__image gift_items__image__mod" href="#">
+			<div class="gift_items__image gift_items__image__mod">
 				<img class="image__mod" src="img/gift1.png" alt="">
 			</div>
 
@@ -17,7 +17,7 @@
 				</div>
 			</div>
 
-			<div class="gift_items__image" href="#">
+			<div class="gift_items__image" >
 				<img src="img/gift2.png" alt="">
 			</div>
 		</div>
@@ -54,11 +54,10 @@
 				<p class="gift_items__description">Sign up for exclusive deals and early access to new products.</p>
 				<input type="email" placeholder="Your Email" class="custom-input" />
 				<div class="gift_items__button">
-					<a href="#">
-						<button class="shop-gift shop-gift__newslt_mod">Subscribe</button>
-					</a>
+					<button class="shop-gift shop-gift__newslt_mod">Subscribe</button>
 				</div>
 			</div>
+
 
 		</div>
 	</div>
