--- a/src/sections/gift.html
+++ b/src/sections/gift.html
@@ -43,7 +43,7 @@
 
 			</div>
 
-			<div class="gift_items__image" href="#">
+			<div class="gift_items__image" >
 				<img src="img/gift3.jpg" alt="">
 			</div>
 
